<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notas2.NewNote2Activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondologin2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="40dp">

            <EditText
                android:id="@+id/edit_text_title2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input_new_note"
                android:hint="@string/titulo_nota"
                android:inputType="text"
                android:maxLength="40"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/edit_text_description2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_new_note"
                android:gravity="start"
                android:hint="@string/desc_nota"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/edit_text_emailTo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_new_note"
                android:gravity="start"
                android:hint="@string/emailDestin_nota"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:textAlignment="textStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/prioridad_nota"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/number_picker_priority2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnCompartirNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="COMPARTIR NOTA" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>